fix start bash